--- a/TestTool/Properties/Resources.resx
+++ b/TestTool/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddOPCDAGroup" xml:space="preserve">
+    <value>Add group</value>
+  </data>
   <data name="ConnectServer" xml:space="preserve">
     <value>Connect</value>
   </data>
