Updated test tool, some fixes

--- a/TestTool/Properties/Resources.resx
+++ b/TestTool/Properties/Resources.resx
@@ -117,8 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AddDAGroupItems" xml:space="preserve">
+    <value>Add items...</value>
+  </data>
   <data name="AddOPCDAGroup" xml:space="preserve">
-    <value>Add group</value>
+    <value>Add group...</value>
   </data>
   <data name="ConnectServer" xml:space="preserve">
     <value>Connect</value>
@@ -127,7 +130,7 @@
     <value>Disconnect</value>
   </data>
   <data name="Properties" xml:space="preserve">
-    <value>Properties</value>
+    <value>Properties...</value>
   </data>
   <data name="RefreshCommand" xml:space="preserve">
     <value>Refresh</value>
